# ocipy

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/stylesheets/: extra.css
src/ocipy/: __init__.py  cli.py  config.py
test/: test_config_loader.py  test_oras_lifecycle.py
