[project]
name = "ocipy"
description = "OCI Python client for interacting with OCI artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "oras",
]

dynamic = ["version"]

[dependency-groups]
lint = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
ocipy = "ocipy:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
